--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main_container">
             <a href="/" class="main_container_btn">Nuestro cátalogo 🛒</a>
             <a href="/" class="main_container_btn">Productos destacados ⭐</a>
-            <a href="/" class="main_container_btn">Promos del mes 📊</a>
+            <a href="https://mi-propia-web.my.canva.site/ofertas-del-mes-ellero" target="_blank" class="main_container_btn">Promos del mes 📊</a>
             <a href="https://maps.app.goo.gl/qFHx8dhJeQpSTc7R6" target="_blank" class="main_container_btn">Nuestra ubicación 📍</a>
         </div>
     </main>
