Button 'nuestro catalogo' disabled

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <main class="main">
         <h2 class="main_title">Ferreteria con onda</h2>
         <div class="main_container">
-            <a href="/" class="main_container_btn">Nuestro cátalogo 🛒</a>
-            <a href="/" class="main_container_btn">Productos destacados ⭐</a>
-            <a href="https://mi-propia-web.my.canva.site/ofertas-del-mes-ellero" target="_blank" class="main_container_btn">Promos del mes 📊</a>
+            <a href="https://wa.me/3455232829" target="_blank" class="main_container_btn">Nuestro whatsapp 📱</a>
             <a href="https://maps.app.goo.gl/qFHx8dhJeQpSTc7R6" target="_blank" class="main_container_btn">Nuestra ubicación 📍</a>
+            <a href="https://mi-propia-web.my.canva.site/ofertas-del-mes-ellero" target="_blank" class="main_container_btn">Ofertas del mes 📊</a>
+            <a class="main_container_btn disabled">Nuestro cátalogo 🛒</a>
         </div>
     </main>
 
